--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -27,20 +27,27 @@
         z-index: 1;
         padding: 1rem;
     }
+    .wrapLogo {
+        display: flex;
+    }
     .logoContent {
         font-family: "Segoe-UI";
-        font-size: 2rem;
         display: flex;
-        align-items: center;
+        flex-direction: column;
+        font-size: 1rem;
+        align-items: flex-start;
     }
     .logoContent span {
-        color: #35b41b;
-        margin: 5px;
+        color: #e94d0f;
+        margin-left: 5px;
+    }
+    .logoContent h4 {
+        margin-left: 5px;
     }
     .logo {
         /* padding: 5px 0 0 30px; */
-        width: 30px;
-        height: 30px;
+        width: 35px;
+        height: 35px;
     }
     .light ul {
         display: flex;
@@ -63,7 +70,7 @@
         transition: all 1s ease-in-out;
     }
     .light ul li a:hover {
-        background: #7e7b80;
+        background: rgba(0, 0, 0, 0.2);
         padding: 1rem 1rem;
         transition: all 1s ease-in-out;
     }
